--- a/contacto.html
+++ b/contacto.html
@@ -51,10 +51,10 @@
                 <input type="tel" name="telefono">
 
                 <!--pago-->
-                <p class="p-form">Métodos de pago:</p>
-                <label for="transferencia"> <input type="radio"> Transferencia </label>
-                <label for="transferencia"><input type="radio"> Tarjeta</label>
-                <label for="efectivo"><input type="radio"> Efectivo</label>
+                <p class="p-form">Motivo de contacto:</p>
+                <label for="transferencia"> <input type="radio"> Compra </label>
+                <label for="efectivo"><input type="radio"> Consulta </label>
+                <label for="efectivo"><input type="radio"> Otro </label>
 
                 <!--observación-->
                 <label for="consulta" class="label">Observación:</label>
