--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 class="courier-prime-regular">Llevá tu pasión a todas partes!</h2>
 
         <h1 class="gluten-uniquifier">¿No nos conoces? ¿Queres saber más sobre nosotras?</h1>
-        <h4 class="courier-prime-regular" id="preg-index" >Preguntas Frecuentes</h4>
+        <h4 class="courier-prime-regular" id="preg-index" >Conocenos!</h4>
         
         <!--ACCORDION-->
         <div class="accordion accordion-flush" id="accordionFlushExample">
