--- a/catalogo.html
+++ b/catalogo.html
@@ -22,7 +22,7 @@
             
             <ul class="gluten-uniquifier">
                 <li ><a href="index.html"><i class="fa-slab-press fa-regular fa-house"></i>Inicio</a></li>
-                <li ><a href="index.html #galeria">Galería</a></li>
+                <li ><a href="index.html">Galería</a></li>
                 <li ><a href="catalogo.html">Catálogo</a> </li>
                 <li ><a href="contacto.html">Contacto</a></li>
             </ul>
@@ -96,7 +96,7 @@
         <div class="footer">
             <ul>
                 <li ><a href="index.html">Inicio</a></li>
-                <li ><a href="index.html #galeria">Galería</a></li>
+                <li ><a href="index.html">Galería</a></li>
                 <li ><a href="catalogo.html">Catálogo</a> </li>
                 <li ><a href="contacto.html">Contacto</a></li>
             </ul>
